[package]
name = "brainfuck-hcy"
version = "1.0.2"
edition = "2021"
authors = ["hcy <hcy347244312@gmail.com>"]
homepage = "https://github.com/hwcwy/brainfuck"
repository = "https://github.com/hwcwy/brainfuck"
description = "My First Rust Project : A Brainfuck Interpreter, Comprehensive and Easy to Read"
license = "MIT"
readme = "README.md"
keywords = ["brainfuck", "interpreter", "beginner-project"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
